<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal"
        android:gravity="center"
        tools:context="ru.spbau.adfmp18_geolocation.MainActivity">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:context="ru.spbau.adfmp18_geolocation.MainActivity">

        <Button
                android:id="@+id/playBtn"
                android:text="@string/play"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        <Button
                android:id="@+id/galleryBtn"
                android:text="@string/gallery"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

    </LinearLayout>
</LinearLayout>
