<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="ru.spbau.adfmp18_geolocation.CameraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            />

        <!--IMPORTANT:
        camera is facing FRONT for the one single reason
        that my phone's normal camera is dead =\-->
        <com.google.android.cameraview.CameraView
            android:id="@+id/camera"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:keepScreenOn="true"
            app:autoFocus="true"
            app:aspectRatio="4:3"
            app:facing="back"
            app:flash="auto" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:gravity="center">
        <Button
            android:id="@+id/capture_button"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/capture">
        </Button>
    </LinearLayout>

</LinearLayout>